Changing PWA status bar color

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -23,7 +23,7 @@
     <link rel="shortcut icon" href="/icons/favicon.ico" />
     <meta name="msapplication-TileColor" content="#3d81e5" />
     <meta name="msapplication-config" content="/browserconfig.xml" />
-    <meta name="theme-color" content="#3d81e5" />
+    <meta name="theme-color" content="#111827" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
